# job-automation

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_PLAN.md  JOB_APPLY_AUTOFILL_MCP_SETUP.md  LICENSE  LINKEDIN_MCP_SETUP.md  OPERATIONS.md  README.md  TRAIN_AND_RUN.md  ai_humanizer.py  alembic.ini  app.py  application_tracker.py  apply_linkedin_jobs.py  docker-compose.yml  enhanced_ats_checker.py  enhanced_job_finder.py  humanize_cover_letter.py  humanize_resume.py  intelligent_project_generator.py  interview_prep_agent.py  mypy.ini  pyproject.toml  regenerate_resume_pdf.py  requirements-mcp.txt  requirements.txt  run_streamlit.py  setup.sh  start.sh  test_all_tabs.py
.streamlit/: config.toml
.vercel/: project.json
Master_Resumes/: .gitkeep  Application
agents/: application_answerer.py  application_runner.py  ats_scorer.py  celery_workflow.py  cover_letter_generator.py  file_manager.py  humanize_cover_letter.py  humanize_resume.py  intelligent_project_generator.py  interview_prep_agent.py  iterative_ats_optimizer.py  job_analyzer.py  job_guard.py  master_resume_guard.py  project_generator.py  queue_runner_executor.py  resume_editor.py  state.py
alembic/: README  env.py
app/: auth.py  main.py  tasks.py
candidate_resumes/: Santhakumar_Base_Resume.md
config/: candidate_profile.example.json  llm_config.json
contrib/: github-actions-ci.yml
dashboard/: README.md  app.py  dashboard_data.xlsx  excel_sync.py
docs/: ACTION_PLAN.md  APPLY_RECOVERY_PLAYBOOKS.md  ARCHITECTURE.md  AUTONOMY_MODEL.md  DATA_RETENTION.md  DEPLOY.md  EXTERNAL_ATS_MANUAL_ASSIST.md  FIX_ROADMAP.md  FOLLOW_UPS.md  MARKET_PRODUCTION_AUDIT_CHECKLIST.md  MARKET_PRODUCTION_ROADMAP.md  MARKET_READY_AUDIT.md  MCP_APPLICATION_DECISION_CONTRACT.md  MIGRATIONS.md  OBJECT_STORAGE.md  OBSERVABILITY.md  PASS_FAIL_CHECKLIST.md  PHASE11_PRODUCTION_QUEUE.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_AUDIT_AND_ROADMAP.md  PRODUCTION_READINESS_GAPS.md  PRODUCT_BRIEF.md  PRODUCT_SCOPE.md  README.md  RELEASE_NOTES_CADENCE.md  RENAME_REPO.md  REPO_HEALTH.md  SAFE_DELETE_CHECKLIST.md  SECRETS_AND_CONFIG.md  SYSTEM_VISION.md  TARGET_OPERATING_MODEL.md  TRACKER_DASHBOARD_QUERIES.md  TWO_LANE_APPLY_STRATEGY.md  (+3 more)
job_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_artifacts/: classifier.pkl  meta_scaler.pkl  model_config.json  tfidf_vectorizer.pkl
model_training/: README.md  fetch_more_data.py  jobguard-classifier.py  train_enhanced.py  train_fast.py
providers/: __init__.py  apify_jobs.py  base_provider.py  common_schema.py  job_source.py  linkedin_mcp_jobs.py  registry.py
scripts/: README.md  apply_linkedin_jobs.py  check_startup.py  email_follow_up_digest.py  follow_up_digest.py  metrics_webhook_alert.py  notify_follow_up_digest.py  print_insights.py  regenerate_resume_pdf.py  telegram_follow_up_digest.py  triage_apply_runner_slo.py  validate_profile.py  webhook_follow_up_digest.py
services/: __init__.py  address_for_job.py  answer_memory_store.py  api_cors.py  application_decision.py  application_insights.py  application_package.py  application_service.py  application_tracker.py  apply_queue_service.py  apply_runner_metrics_redis.py  approval_service.py  artifact_metadata.py  ats_form_analysis.py  ats_service.py  autofill_values.py  autonomy_control.py  autonomy_submit_gate.py  batch_prioritize_jobs.py  celery_admin_inspect.py  discovery_ranker.py  document_service.py  enhanced_job_finder.py  fit_engine.py  follow_up_email.py  follow_up_service.py  follow_up_telegram.py  follow_up_webhook.py  form_type_detection.py  idempotency_db.py  idempotency_keys.py  job_location_match.py  job_prefilter.py  job_search_service.py  keyword_coverage.py  linkedin_browser_automation.py  linkedin_browser_gate.py  linkedin_easy_apply.py  live_form_probe.py  llm_provider.py  (+42 more)
tests/: conftest.py  test_address_for_job.py  test_agent_llm_router_migration.py  test_answer_memory_store.py  test_answerer_preview_export.py  test_api.py  test_api_cors.py  test_application_answerer.py  test_application_answerer_memory.py  test_application_decision.py  test_application_insights.py  test_application_runner_review.py  test_application_tracker_delete.py  test_apply_queue_phase6.py  test_approval_workflow_phase7.py  test_ats_registry.py  test_auth_roles.py  test_autonomy_control.py  test_autonomy_submit_gate.py  test_celery_admin_inspect.py  test_check_startup_script.py  test_critical_flows.py  test_discovery_prefilter_phase3.py  test_fit_engine.py  test_follow_up.py  test_follow_up_email.py  test_follow_up_telegram.py  test_follow_up_webhook.py  test_form_hints.py  test_idempotency_db.py  test_iterative_ats_optimizer.py  test_job_location_match.py  test_job_source.py  test_job_state_postgres_enum.py  test_lifecycle_tracking_phase11.py  (+35 more)
(+34 files in other folders)
