[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-co-pilot-pro"
version = "0.1.0"
description = "AI-powered job application automation system"
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.22",
    "celery[redis]>=5.3",
    "pydantic>=1.10",
    "redis>=4.5",
    "langchain-openai",
    "langgraph",
    "streamlit",
    "pandas",
    "reportlab",
    "bs4",
    "requests",
    "python-dotenv",
    "PyMuPDF",
    "apify-client",
    "scikit-learn",
    "joblib",
    "nltk"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
mcp = [
    "mcp",
    "fastmcp",
    "playwright"
]
full = [
    "mcp",
    "fastmcp",
    "playwright"
]
auth = [
    "PyJWT>=2.8",
]
postgres = [
    "psycopg2-binary>=2.9",
]
migrations = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]
s3 = [
    "boto3>=1.34",
]
metrics = [
    "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*", "agents*", "dashboard*", "config*", "services*", "providers*", "ui*", "mcp_servers*"]
